# masterx-ovdm-linux

./: README.md
TTF_to_MXF/: Makefile  README
libmxui/: CONTROLS  Makefile.am  Makefile.in  README  autogen.sh  boost-1_35.patch  config.h.in  config.h.in~  configure  configure.ac  mxui.pc.in  ppu-add.patch
libmxui/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libmxui/masterx/: .prefs  Makefile.am  Makefile.in  RunMasterX  RunMasterXFull  chatdim.cpp  chatdim.h  console.cpp  console.h  login.h  masterx.cpp  masterx.h  mxassert.h  mxdb.cpp  mxdb.h  mxuser.h  welcome.cpp  welcome.h
libmxui/masterx/fonts/: courier.mxf  hell.mxf  roman.mxf  serif.mxf  system.mxf  tahoma.mxf  verdana.mxf
libmxui/masterx/img/menu/: login.mxl
libmxui/masterx/img/skins/mx/: skin.mxl
libmxui/masterx/img/skins/mx/black/: skin.mxl
libmxui/masterx/scripts/: 3cardmonte.py
libmxui/mxui/: Makefile.am  Makefile.in  keyFilter.cpp  keyfilter.h  menu.cpp  menu.h  mxdimension.cpp  mxdimension.h  mxe.h  mxmsgbox.cpp  mxmsgbox.h  mxplugin.cpp  mxplugin.h  mxreg.cpp  mxreg.h  mxserver.cpp  mxserver.h  mxwidget.cpp  mxwidget.h  mxwidget_type.cpp  mxwidget_type.h  mxwindow.cpp  mxwindow.h  wcode.h
